# aure

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test-prompt.md  test_prompt_submit.py
.github/workflows/: docker-publish.yml  tests.yml
src/aure/: __init__.py  cli.py  config.py  mcp_server.py  state.py
src/aure/database/: __init__.py  materials.py
src/aure/exporters/: __init__.py  base.py  isaac.py
src/aure/llm/: config.py  timeout.py
src/aure/llm/providers/: __init__.py  alcf.py
src/aure/nodes/: __init__.py  evaluation.py  fitting.py  intake.py  modeling.py  prompts.py  refinement.py  routing.py
src/aure/tools/: __init__.py  data_tools.py  feature_tools.py
src/aure/web/: __init__.py  data.py  routes.py
src/aure/web/static/: setup.js  style.css
src/aure/web/templates/: base.html  history.html  results.html  setup.html
src/aure/workflow/: __init__.py  checkpoints.py  runner.py  tracing.py
tests/: test_exporter.py  test_feature_extraction.py  test_restart.py  test_web_interactive.py  test_workflow.py
validation/: batch_runner.py  cli.py  comparator.py  report.py
