[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aure"
version = "0.1.0"
description = "Thin film reflectivity sample builder with neural network foundation model"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Oak Ridge National Laboratory" }]

dependencies = ["flask>=3.0", "numpy>=1.24", "scipy>=1.10", "refl1d>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
agent = [
  "langgraph>=1.0",
  "langchain>=1.0",
  "langchain-openai>=1.0",
  "langchain-google-genai>=2.0.0",
  "periodictable>=2.0",
  "fastmcp>=2.0",
  "click>=8.0",
  "pyyaml>=6.0",
]
alcf = ["globus-sdk>=3.0"]
export = [
  "nr-isaac-format @ git+https://github.com/isaac-neutrons/nr-isaac-format.git",
]
all = ["aure[dev,agent,alcf,export]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["aure*"]

[tool.setuptools.package-data]
"aure.web" = ["templates/**/*", "static/**/*"]

[project.scripts]
aure = "aure.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=aure --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["src/aure"]
omit = ["src/aure/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
]
